test/langtools/tools/javac/valhalla/lworld-values/InlineAnnotationTest.out
InlineAnnotationTest.java:25:1: compiler.err.illegal.combination.of.modifiers: interface, primitive
InlineAnnotationTest.java:20:9: compiler.err.cant.assign.val.to.final.var: x
2 errors
